# fnii_vision_detect

./: CMakeLists.txt  package.xml  readme.md
launch/: detect.launch
msg/: MultiStreamObjects.msg  Object.msg  Objects.msg
scripts/: __init__.py  get_point.py  node.py  test.py  tt.py  yolo_detect.py
srv/: Detect.srv
